fix deploy config

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 ## VK_SETTINGS
 
-SERCRET_KEY='IBwVviOhGGWczXVWh6HpyIJHQBND3kbo86K2'
+SERCRET_KEY='SECRET_KEY'
 
 ## MAIN BOT
 MAIN_BOT_TOKEN='TOKEN'
