--- a/.env.example
+++ b/.env.example
@@ -6,10 +6,9 @@ SERCRET_KEY='SECRET_KEY'
 MAIN_BOT_TOKEN='TOKEN'
 MAIN_CONFIRMATION_CODE='code'
 
-## REPORT BOT
-REPORT_BOT_TOKEN='TOKEN'
-REPORT_CONFIRMATION_CODE='CODE'
 
+SERVER_API_URL='url'
+RCC_KEY='key'
 # SERVER_SETTINGS
 
 PORT=7777
