--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,9 @@ ujson = "5.8.*"
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.0.275"
 black = "^23.3.0"
+pytest = "^7.4.0"
+pytest-asyncio = "^0.21.1"
+polyfactory = "^2.6.1"
 
 [build-system]
 requires = ["poetry-core"]
@@ -35,8 +38,8 @@ ignore = ['ANN101', 'ANN204', 'ANN401', 'ANN002', 'ANN003', 'PLR0913', 'B904']
 
 [tool.ruff.per-file-ignores]
 "__init__.py" = ["F401"] # Unused import
-"tests/*" = ['ANN']  # Annotations
-"app/handlers/*" = ['ARG001']
+"tests/*" = ['ANN', 'ARG']  # Annotations
+"app/handlers/*" = ['ARG001', 'ARG002']
 "app/core/custom_rules/*" = ['ARG002']
 
 [tool.ruff.flake8-quotes]
