--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,8 +30,8 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.ruff]
 line-length = 120
-select = ['Q', 'F', 'I', 'ANN', 'B', 'C4', 'TID', 'ARG', 'PLR']
-ignore = ['ANN101', 'ANN204', 'ANN401', 'ANN002', 'ANN003', 'PLR0913', 'B904']  
+select = ['Q', 'F', 'I', 'B', 'C4', 'TID', 'ARG', 'PLR']
+ignore = ['PLR0913', 'B904']  
 # ANN - https://beta.ruff.rs/docs/rules/#flake8-annotations-ann, 
 # PLR0913 - Too many arguments
 
