--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,18 @@ services:
     networks:
       - magic_helper_network
 
+  nginx:  
+      build:
+        context: .
+        dockerfile: ./docker/nginx/Dockerfile
+      container_name: nginx_bot
+      depends_on:
+        - bot
+      ports:
+        - 80:80
+      networks:
+        - magic_helper_network
+
 networks:
   magic_helper_network:
     driver: bridge
